--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.8.7",
     "@storybook/addon-a11y": "^5.2.1",
     "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-docs": "^5.3.17",
     "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
     "@storybook/addon-notes": "^5.3.17",
@@ -36,7 +37,6 @@
     "@storybook/addon-viewport": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/vue": "^5.3.17",
-    "fibers": "^4.0.1",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
@@ -47,16 +47,19 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fibers": "^4.0.1",
+    "material-design-icons-iconfont": "^5.0.1",
     "prettier": "^1.18.2",
     "rollup": "^1.17.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-vue": "^5.0.1",
-    "material-design-icons-iconfont": "^5.0.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "storybook-vue-router": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-docgen-api": "^4.14.0",
+    "vue-docgen-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
   }
