--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "@myetherwallet/mew-components",
   "version": "0.1.0-beta",
-  "main": "dist/my-component.umd.js",
-  "module": "dist/my-component.esm.js",
-  "unpkg": "dist/my-component.min.js",
+  "main": "dist/mew-components.umd.js",
+  "module": "dist/mew-components.esm.js",
+  "unpkg": "dist/mew-components.min.js",
   "browser": {
-    "./sfc": "src/my-component.vue"
+    "./sfc": "src/mew-components.vue"
   },
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/my-component.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/my-component.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/my-component.min.js",
+    "build:umd": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format umd --file dist/mew-components.umd.js",
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es --file dist/mew-components.esm.js",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --file dist/mew-components.min.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-cli-plugin-storybook": "^1.2.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
@@ -53,6 +54,8 @@
     "rollup": "^1.17.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-uglify-es": "0.0.1",
     "rollup-plugin-vue": "^5.0.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
@@ -61,6 +64,8 @@
     "vue-docgen-api": "^4.14.0",
     "vue-docgen-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2"
+    "vuetify-loader": "^1.2.2",
+    "cross-env": "^5.2.0",
+    "minimist": "^1.2.0"
   }
 }
