--- a/package.json
+++ b/package.json
@@ -1,41 +1,36 @@
 {
   "name": "@myetherwallet/mew-components",
-  "version": "0.0.1-beta",
-  "main": "dist/mew-components.umd.js",
-  "module": "dist/mew-components.esm.js",
-  "unpkg": "dist/mew-components.min.js",
+  "version": "0.1.1-beta",
+  "description": "MEW Components",
+  "main": "dist/mewComponents.umd.js",
+  "module": "dist/mewComponents.esm.js",
+  "unpkg": "dist/mewComponents.min.js",
   "browser": {
-    "./sfc": "src/mew-components.vue"
+    "./sfc": "src/mewComponents.vue"
   },
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
     "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
-    "build:umd": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format umd --file dist/mew-components.umd.js",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es --file dist/mew-components.esm.js",
-    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife --file dist/mew-components.min.js",
+    "build-bundle": "vue-cli-service build --target lib --name mewComponents ./src/wrapper.js",
+    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/mewComponents.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/mewComponents.esm.js",
+    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/mewComponents.min.js",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
-    "vue-cli-plugin-storybook": "^1.2.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "@storybook/addon-a11y": "^5.2.1",
     "@storybook/addon-actions": "^5.3.17",
-    "@storybook/addon-docs": "^5.3.17",
-    "@storybook/addon-knobs": "^5.3.17",
     "@storybook/addon-links": "^5.3.17",
-    "@storybook/addon-notes": "^5.3.17",
-    "@storybook/addon-storysource": "^5.3.17",
-    "@storybook/addon-viewport": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/vue": "^5.3.17",
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -48,24 +43,22 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^4.0.1",
-    "material-design-icons-iconfont": "^5.0.1",
     "prettier": "^1.18.2",
     "rollup": "^1.17.0",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-uglify-es": "0.0.1",
     "rollup-plugin-vue": "^5.0.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
-    "storybook-vue-router": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.6.3",
-    "vue-docgen-api": "^4.14.0",
-    "vue-docgen-loader": "^1.5.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2",
-    "cross-env": "^5.2.0",
-    "minimist": "^1.2.0"
-  }
+    "vuetify-loader": "^1.2.2"
+  },
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ]
 }
