--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@storybook/addon-backgrounds": "^5.3.17",
+    "@storybook/addon-viewport": "^5.3.17",
+    "@storybook/source-loader": "^5.3.17",
     "core-js": "^2.6.5",
+    "fibers": "^4.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
