--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "all": "0.0.0",
     "core-js": "^2.6.5",
     "fibers": "^4.0.2",
+    "git-url-parse": "^11.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
-    "vuex": "^3.0.1",
-    "git-url-parse": "^11.1.2"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
