--- a/.github/workflows/publish-to-gh-pages.yml
+++ b/.github/workflows/publish-to-gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm install
 
       - name: build
-        run: npm run build-storybook
+        run: rm -rf .out && npm run build-storybook
 
       - name: deploy to gh-pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
