--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
     "all": "0.0.0",
     "core-js": "^2.6.5",
     "eslint-config-eslint": "^6.0.0",
-    "fibers": "^4.0.2",
+    "fibers": "^4.0.3",
     "git-url-parse": "^11.1.2",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-router": "^3.0.3",
-    "vuetify": "^2.0.0",
-    "vuex": "^3.0.1"
+    "vuetify": "^2.2.23",
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
-    "@mdi/font": "^5.0.45",
+    "@mdi/font": "^5.1.45",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-backgrounds": "^5.3.17",
     "@storybook/addon-docs": "^5.3.18",
@@ -46,8 +46,8 @@
     "@storybook/addon-viewport": "^5.3.17",
     "@storybook/addons": "^5.3.17",
     "@storybook/source-loader": "^5.3.17",
-    "@storybook/storybook-deployer": "^2.8.3",
-    "@storybook/vue": "^5.3.17",
+    "@storybook/storybook-deployer": "^2.8.5",
+    "@storybook/vue": "^6.0.0-alpha",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
@@ -56,7 +56,7 @@
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
     "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
     "prettier": "^1.18.2",
@@ -64,7 +64,7 @@
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-vue": "^5.0.1",
-    "sass": "^1.18.0",
+    "sass": "^1.26.5",
     "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
