--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@storybook/addons": "^5.3.17",
     "@storybook/source-loader": "^5.3.17",
     "@storybook/storybook-deployer": "^2.8.5",
-    "@storybook/vue": "^6.0.0-alpha",
+    "@storybook/vue": "^5.3.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
