--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myetherwallet/mew-components",
-  "version": "0.2.13-beta",
+  "version": "0.2.14-beta",
   "description": "MEW Components",
   "main": "dist/mew-components.umd.js",
   "module": "dist/mew-components.esm.js",
@@ -71,6 +71,7 @@
     "vuetify-loader": "^1.2.2"
   },
   "files": [
+    "dist",
     "src/*",
     "public/*",
     "*.json",
