--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myetherwallet/mew-components",
-  "version": "0.2.17-beta",
+  "version": "0.2.18-beta",
   "description": "MEW Components",
   "main": "dist/mew-components.umd.js",
   "unpkg": "dist/mew-components.min.js",
@@ -11,9 +11,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "eslint --fix 'src/**/*.vue'",
-    "build": "npm run build:umd & npm run build:unpkg",
+    "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
     "build-bundle": "vue-cli-service build --target lib --name mew-components ./src/wrapper.js",
     "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/mew-components.umd.js",
+    "build:es": "rollup --config build/rollup.config.js --format es --file dist/mew-components.esm.js",
     "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/mew-components.min.js",
     "storybook": "start-storybook -p 6006 -c .storybook watch-css -s ./src",
     "build-storybook": "build-storybook -c .storybook -o .out",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.7",
     "@mdi/font": "^5.1.45",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-backgrounds": "^5.3.17",
     "@storybook/addon-docs": "^5.3.18",
