--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@myetherwallet/mew-components",
-  "version": "0.2.54-beta",
+  "version": "0.2.55-beta",
   "description": "MEW Components",
   "main": "dist/mew-components.umd.js",
   "module": "dist/mew-components.esm.js",
@@ -24,8 +24,10 @@
   },
   "dependencies": {
     "@vue/babel-preset-app": "^4.3.1",
+    "@vue/cli": "^4.4.1",
+    "@vue/web-component-wrapper": "^1.2.0",
     "all": "0.0.0",
-    "core-js": "^2.6.5",
+    "core-js": "3.6.5",
     "eslint-config-eslint": "^6.0.0",
     "fibers": "^5.0.0",
     "git-url-parse": "^11.1.2",
@@ -55,14 +57,14 @@
     "@storybook/source-loader": "^5.3.17",
     "@storybook/storybook-deployer": "^2.8.5",
     "@storybook/vue": "^5.3.18",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "4.4.1",
+    "@vue/cli-plugin-eslint": "4.4.1",
+    "@vue/cli-service": "4.4.1",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
-    "eslint": "^5.16.0",
+    "eslint": "5.16.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
@@ -73,7 +75,8 @@
     "rollup-plugin-vue": "^5.0.1",
     "sass": "^1.26.5",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.3",
+    "style-resources-loader": "^1.3.3",
+    "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
   },
