--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "@myetherwallet/mew-components",
-  "version": "0.3.2-beta",
+  "version": "0.3.3-beta",
+  "private": false,
   "description": "MEW Components",
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build  --target wc --name mew-button ./src/components/MewButton/MewButton.vue",
+    "lint": "eslint --fix 'src/**/*.vue'",
+    "build-bundle": "vue-cli-service build --target lib --name mew-components ./src/wrapper.js",
+    "build-storybook": "build-storybook -c .storybook -o .out",
+    "build:es": "rollup --config rollup.config.js --format es --file dist/mew-components.esm.js",
+    "build:umd": "rollup --config rollup.config.js --format umd --file dist/mew-components.umd.js",
+    "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/mew-components.min.js",
+    "deploy-storybook": "storybook-to-ghpages",
+    "eslint": "eslint --ignore-path .gitignore .",
+    "storybook": "start-storybook -p 6006 -c .storybook watch-css -s ./src"
+  },
   "main": "dist/mew-components.umd.js",
   "module": "dist/mew-components.esm.js",
-  "unpkg": "dist/mew-components.min.js",
   "browser": {
     "./sfc": "src/mew-components.vue"
   },
-  "private": false,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "lint": "eslint --fix 'src/**/*.vue'",
-    "build": "npm run build:umd & npm run build:es & npm run build:unpkg",
-    "build-bundle": "vue-cli-service build --target lib --name mew-components ./src/wrapper.js",
-    "build:umd": "rollup --config rollup.config.js --format umd --file dist/mew-components.umd.js",
-    "build:es": "rollup --config rollup.config.js --format es --file dist/mew-components.esm.js",
-    "build:unpkg": "rollup --config rollup.config.js --format iife --file dist/mew-components.min.js",
-    "storybook": "start-storybook -p 6006 -c .storybook watch-css -s ./src",
-    "build-storybook": "build-storybook -c .storybook -o .out",
-    "deploy-storybook": "storybook-to-ghpages",
-    "eslint": "eslint --ignore-path .gitignore ."
-  },
+  "unpkg": "dist/mew-components.min.js",
+  "files": [
+    "dist",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "dependencies": {
     "@vue/babel-preset-app": "^4.3.1",
     "all": "0.0.0",
@@ -34,7 +41,7 @@
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify-es": "0.0.1",
     "vue": "^2.6.10",
-    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-router": "^3.0.3",
     "vuetify": "^2.2.23",
     "vuex": "^3.2.0"
@@ -55,10 +62,12 @@
     "@storybook/source-loader": "^5.3.17",
     "@storybook/storybook-deployer": "^2.8.5",
     "@storybook/vue": "^5.3.18",
+    "@vue/cli": "^4.4.1",
     "@vue/cli-plugin-babel": "4.4.1",
     "@vue/cli-plugin-eslint": "4.4.1",
     "@vue/cli-service": "4.4.1",
     "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/web-component-wrapper": "^1.2.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
@@ -72,16 +81,10 @@
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-vue": "^5.0.1",
     "sass": "^1.26.5",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "8.0.2",
+    "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
-  },
-  "files": [
-    "dist",
-    "src/*",
-    "public/*",
-    "*.json",
-    "*.js"
-  ]
+  }
 }
