--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "MEW Components",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build  --target wc --name mew-button ./src/components/MewButton/MewButton.vue",
+    "build": "vue-cli-service build  --target wc --name mew-button ./src/components/MewButton/MewButton.wc.js",
     "lint": "eslint --fix 'src/**/*.vue'",
     "build-bundle": "vue-cli-service build --target lib --name mew-components ./src/wrapper.js",
     "build-storybook": "build-storybook -c .storybook -o .out",
@@ -80,8 +80,8 @@
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-vue": "^5.0.1",
-    "sass": "^1.26.5",
-    "sass-loader": "8.0.2",
+    "sass": "^1.26.7",
+    "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
     "vue-template-compiler": "^2.6.10",
