--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-eslint": "^6.0.0",
     "fibers": "^5.0.0",
     "git-url-parse": "^11.1.2",
+    "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "minimist": "^1.2.5",
     "rollup-plugin-replace": "^2.2.0",
