--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "eslint-config-eslint": "^6.0.0",
     "fibers": "^5.0.0",
     "git-url-parse": "^11.1.2",
-    "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
     "minimist": "^1.2.5",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-uglify-es": "0.0.1",
+    "style-loader": "^1.2.1",
     "vue": "^2.6.10",
-    "vue-cli-plugin-style-resources-loader": "^0.1.4",
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-loader": "^15.9.2",
     "vue-router": "^3.0.3",
+    "vue-style-loader": "^4.1.2",
     "vuetify": "^2.2.23",
     "vuex": "^3.2.0"
   },
@@ -56,10 +58,12 @@
     "@storybook/source-loader": "^5.3.17",
     "@storybook/storybook-deployer": "^2.8.5",
     "@storybook/vue": "^5.3.18",
+    "@vue/cli": "^4.4.1",
     "@vue/cli-plugin-babel": "4.4.1",
     "@vue/cli-plugin-eslint": "4.4.1",
     "@vue/cli-service": "4.4.1",
     "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/web-component-wrapper": "^1.2.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
@@ -72,10 +76,10 @@
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-vue": "^5.0.1",
-    "sass": "^1.26.5",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.0.2",
+    "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "^2.0.5",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.2.2"
   },
   "files": [
