Add mew chart, update mew table

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/babel-preset-app": "^4.4.6",
     "all": "0.0.0",
     "bignumber.js": "^9.0.0",
+    "chart.js": "^2.9.3",
     "core-js": "3.6.5",
     "eslint-config-eslint": "^6.0.0",
     "fibers": "^5.0.0",
@@ -36,6 +37,7 @@
     "rollup-plugin-uglify-es": "0.0.1",
     "style-loader": "^1.2.1",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
