--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^2.3.4",
     "@vue/babel-preset-app": "^4.4.6",
     "all": "0.0.0",
     "bignumber.js": "^9.0.0",
@@ -33,7 +34,6 @@
     "git-url-parse": "^11.1.2",
     "material-design-icons-iconfont": "^5.0.1",
     "minimist": "^1.2.5",
-    "@rollup/plugin-replace": "^2.3.4",
     "rollup-plugin-uglify-es": "0.0.1",
     "style-loader": "^1.2.1",
     "vue": "^2.6.10",
@@ -49,13 +49,11 @@
     "@babel/core": "^7.10.4",
     "@mdi/font": "^5.1.45",
     "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-commonjs": "17.1.0",
     "@rollup/plugin-image": "^2.0.5",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-url": "6.0.0",
-    "@rollup/plugin-buble": "0.21.3",
-    "@rollup/plugin-commonjs": "17.1.0",
-    "rollup": "^2.3.0",
-    "rollup-plugin-vue": "^5.0.1",
     "@storybook/addon-actions": "^5.3.17",
     "@storybook/addon-backgrounds": "^5.3.17",
     "@storybook/addon-docs": "^5.3.18",
@@ -75,11 +73,14 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "babel-preset-vue": "^2.0.2",
-    "eslint": "5.16.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-storybook": "^0.5.6",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
     "prettier": "^1.18.2",
+    "rollup": "^2.3.0",
+    "rollup-plugin-vue": "^5.0.1",
     "sass-loader": "^7.0.2",
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "^2.0.6",
