--- a/.github/workflows/add-to-mewbuilds.yml
+++ b/.github/workflows/add-to-mewbuilds.yml
@@ -38,11 +38,11 @@ jobs:
           GITHUB_TOKEN: ${{secrets.MEW_BOT_TOKEN}}
         run: |
           pip install --user awscli
-          aws s3 sync --delete --acl public-read dist/ s3://mewcomponents/v6/build/$GITHUB_SHA
-          aws s3 cp s3://mewcomponents/v6/build/$GITHUB_SHA/service-worker.js s3://mewcomponents/v6/build/$GITHUB_SHA/service-worker.js \
+          aws s3 sync --delete --acl public-read dist/ s3://mewcomponents/build/$GITHUB_SHA
+          aws s3 cp s3://mewcomponents/build/$GITHUB_SHA/service-worker.js s3://mewcomponents/build/$GITHUB_SHA/service-worker.js \
             --metadata-directive REPLACE --cache-control max-age=0,no-cache,no-store,must-revalidate \
             --content-type application/javascript --acl public-read
-          aws s3 cp s3://mewcomponents/v6/build/$GITHUB_SHA/index.html s3://mewcomponents/v6/build/$GITHUB_SHA/index.html \
+          aws s3 cp s3://mewcomponents/build/$GITHUB_SHA/index.html s3://mewcomponents/build/$GITHUB_SHA/index.html \
             --metadata-directive REPLACE --cache-control max-age=0,no-cache,no-store,must-revalidate \
             --content-type text/html --acl public-read
           cd dist && zip -r ../mewcomponents-$GITHUB_SHA.zip * && cd ..
