--- a/.github/workflows/add-to-mewbuilds.yml
+++ b/.github/workflows/add-to-mewbuilds.yml
@@ -38,11 +38,11 @@ jobs:
           GITHUB_TOKEN: ${{secrets.MEW_BOT_TOKEN}}
         run: |
           pip install --user awscli
-          aws s3 sync --delete --acl public-read dist/ s3://mewcomponents/build/$GITHUB_SHA
+          aws s3 sync --delete --acl public-read .out/ s3://mewcomponents/build/$GITHUB_SHA
           aws s3 cp s3://mewcomponents/build/$GITHUB_SHA/index.html s3://mewcomponents/build/$GITHUB_SHA/index.html \
             --metadata-directive REPLACE --cache-control max-age=0,no-cache,no-store,must-revalidate \
             --content-type text/html --acl public-read
-          cd dist && zip -r ../mewcomponents-$GITHUB_SHA.zip * && cd ..
+          cd .out && zip -r ../mewcomponents-$GITHUB_SHA.zip * && cd ..
           FILE_SHA256=`sha256sum  mewcomponents-$GITHUB_SHA.zip | awk '{print $1}'`
           curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY"
           UPLOAD_URL=`curl --request GET --url https://www.virustotal.com/api/v3/files/upload_url --header "x-apikey: $VIRUS_TOTAL_API_KEY" | jq --raw-output '.data'`
