--- a/.github/workflows/add-to-mewbuilds.yml
+++ b/.github/workflows/add-to-mewbuilds.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: build
-        run: npm run build
+        run: npm run build-storybook
 
       - name: post build
         if: github.base_ref == ''
