--- a/.github/workflows/add-to-mewbuilds.yml
+++ b/.github/workflows/add-to-mewbuilds.yml
@@ -20,6 +20,9 @@ jobs:
           key: ${{ runner.os }}-node-${{steps.node-version.outputs.NODE_VERSION}}-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-${{steps.node-version.outputs.NODE_VERSION}}-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "10.x"
 
       - name: npm install
         run: npm install
