--- a/.github/workflows/add-to-mewbuilds.yml
+++ b/.github/workflows/add-to-mewbuilds.yml
@@ -38,7 +38,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
           AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
           VIRUS_TOTAL_API_KEY: ${{secrets.VIRUS_TOTAL_API_KEY}}
-          GITHUB_TOKEN: ${{secrets.MEW_BOT_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         run: |
           pip install --user awscli
           aws s3 sync --delete --acl public-read .out/ s3://mewcomponents/build/$GITHUB_SHA
