--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-storybook": "^0.5.6",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.0.0",
+    "file-system-cache": "1.0.5",
     "prettier": "^1.18.2",
     "rollup": "^2.3.0",
     "rollup-plugin-vue": "^5.0.1",
