--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
+    "vue-tippy": "^4.13.0",
     "vuetify": "2.5.12",
     "vuex": "^3.5.1"
   },
