--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "browser": {
     "./sfc": "src/mew-components.vue"
   },
-  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint && eslint . --ext .js --ext .vue --fix",
@@ -39,7 +38,7 @@
     "style-loader": "^1.2.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
-    "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-cli-plugin-style-resources-loader": "~0.1.5",
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
@@ -66,10 +65,10 @@
     "@storybook/source-loader": "^6.5.12",
     "@storybook/storybook-deployer": "^2.8.12",
     "@storybook/vue": "^6.5.12",
-    "@vue/cli": "^4.4.6",
-    "@vue/cli-plugin-babel": "4.4.1",
-    "@vue/cli-plugin-eslint": "4.4.1",
-    "@vue/cli-service": "4.4.1",
+    "@vue/cli": "^5.0.8",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/web-component-wrapper": "^1.2.0",
     "babel-eslint": "^10.0.1",
@@ -85,7 +84,7 @@
     "rollup-plugin-vue": "^5.0.1",
     "sass-loader": "^7.0.2",
     "style-resources-loader": "^1.3.3",
-    "vue-cli-plugin-vuetify": "^2.0.6",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.5.0"
   },
