--- a/package.json
+++ b/package.json
@@ -36,10 +36,11 @@
     "minimist": "^1.2.5",
     "rollup-plugin-uglify-es": "0.0.1",
     "style-loader": "^1.2.1",
-    "vue": "^2.6.10",
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0",
     "vue-chartjs": "^3.5.0",
     "vue-cli-plugin-style-resources-loader": "~0.1.5",
-    "vue-loader": "^15.9.3",
+    "vue-loader": "^16.0.0",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-tippy": "^4.13.0",
@@ -64,7 +65,7 @@
     "@storybook/addons": "^6.5.12",
     "@storybook/source-loader": "^6.5.12",
     "@storybook/storybook-deployer": "^2.8.12",
-    "@storybook/vue": "^6.5.12",
+    "@storybook/vue3": "^6.5.12",
     "@vue/cli": "^5.0.8",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
@@ -85,7 +86,7 @@
     "sass-loader": "^7.0.2",
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "vue-template-compiler": "^2.6.11",
+    "@vue/compiler-sfc": "^3.1.0",
     "vuetify-loader": "^1.5.0"
   },
   "files": [
