--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@rollup/plugin-replace": "^2.3.4",
     "@vue/babel-preset-app": "^4.4.6",
+    "@vue/compat": "^3.1.0",
     "all": "0.0.0",
     "bignumber.js": "^9.0.0",
     "chart.js": "^2.9.3",
@@ -37,14 +38,13 @@
     "rollup-plugin-uglify-es": "0.0.1",
     "style-loader": "^1.2.1",
     "vue": "^3.1.0",
-    "@vue/compat": "^3.1.0",
     "vue-chartjs": "^3.5.0",
     "vue-cli-plugin-style-resources-loader": "~0.1.5",
     "vue-loader": "^16.0.0",
     "vue-router": "^3.3.4",
     "vue-style-loader": "^4.1.2",
     "vue-tippy": "^4.13.0",
-    "vuetify": "2.5.12",
+    "vuetify": "^2.6.11",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
@@ -87,7 +87,7 @@
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "@vue/compiler-sfc": "^3.1.0",
-    "vuetify-loader": "^1.5.0"
+    "vuetify-loader": "^1.9.2"
   },
   "files": [
     "dist",
