--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "vue-chartjs": "^3.5.0",
     "vue-cli-plugin-style-resources-loader": "~0.1.5",
     "vue-loader": "^16.0.0",
-    "vue-router": "^3.3.4",
+    "vue-router": "^4.1.5",
     "vue-style-loader": "^4.1.2",
     "vue-tippy": "^4.13.0",
     "vuetify": "^2.6.11",
-    "vuex": "^3.5.1"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -70,6 +70,7 @@
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
     "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "@vue/web-component-wrapper": "^1.2.0",
     "babel-eslint": "^10.0.1",
@@ -86,8 +87,7 @@
     "sass-loader": "^7.0.2",
     "style-resources-loader": "^1.3.3",
     "vue-cli-plugin-vuetify": "~2.5.8",
-    "@vue/compiler-sfc": "^3.1.0",
-    "vuetify-loader": "^1.9.2"
+    "webpack-plugin-vuetify": "^2.0.0-alpha.13"
   },
   "files": [
     "dist",
