--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "vue-router": "^4.1.5",
     "vue-style-loader": "^4.1.2",
     "vue-tippy": "^4.13.0",
-    "vuetify": "^2.6.11",
+    "vuetify": "^3.0.0-beta.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
