--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "minimist": "^1.2.5",
+    "pinia": "^2.0.23",
     "rollup-plugin-uglify-es": "0.0.1",
     "style-loader": "^1.2.1",
     "vue": "^3.1.0",
